--- a/api/package.json
+++ b/api/package.json
@@ -36,12 +36,12 @@
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.5.1",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "nodemon": "^2.0.6"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^8.2.1",
-    "nodemon": "^2.0.6",
     "sequelize-cli": "^6.2.0",
     "supertest": "^4.0.2",
     "supertest-session": "^4.1.0"
