--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,8 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "rsuite": "^4.8.6"
+    "rsuite": "^4.8.6",
+    "nodemon": "^2.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -53,7 +54,6 @@
     ]
   },
   "devDependencies": {
-    "nodemon": "^2.0.7",
     "sequelize-cli": "^6.2.0"
   }
 }
